# techprobe

./: .gitignore  Cargo.toml  README.md  examples.sh  install.sh
data/: categories.json  technologies.json
extension/: background.js  content.js  detector.js  fingerprints.js  manifest.json  popup.css  popup.html  popup.js
scripts/: update-fingerprints.sh
src/: lib.rs  main.rs
src/detectors/: cookie_detector.rs  html_detector.rs  meta_detector.rs  mod.rs  script_detector.rs  url_detector.rs
src/fingerprints/: mod.rs
tests/: fingerprints_test.rs
