[package]
name = "techprobe"
version = "0.1.0"
edition = "2021"
description = "High-performance web technology detector — Rust alternative to Wappalyzer"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
scraper = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2"
url = "2"
futures = "0.3"
dns-lookup = "2"
rcgen = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
